# Seguranca_mercado_v2

./: .env.example  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  smoke_test_results.json
docs/: arquitetura.docx  decisoes.md  implementacao.docx  perguntas-pendentes.md
scripts/: download_models.sh  smoke_test.py
sinc/: __init__.py  cli.py  config.py
sinc/api/: deps.py  main.py
sinc/api/routes/: auth.py  health.py  users.py
sinc/db/: session.py
sinc/db/migrations/: env.py
sinc/db/migrations/versions/: 0001_initial_schema.py
sinc/models/: __init__.py  alert.py  audit_log.py  camera.py  person.py  user.py
sinc/schemas/: auth.py  common.py  users.py
tests/: conftest.py  test_auth.py  test_health.py  test_users.py
